# neurotraffic-lab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_task.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  EXPERIMENT_DESIGN.md  PROJECT_BRIEF.zh-CN.md  ROADMAP.md
examples/: grid4x4_compare.yaml  grid4x4_max_pressure.yaml
runs/grid4x4_compare/: comparison_table.csv  intersection_queues.csv  summary.csv  timeseries.csv
src/neurotraffic/: __init__.py  cli.py  config.py  controllers.py  demand.py  forecasting.py  metrics.py  network.py  simulator.py  visualization.py
tests/: test_metrics_and_forecasting.py  test_simulator.py
