[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotraffic-lab"
version = "0.1.0"
description = "A Python research framework for intelligent transportation digital twins, forecasting, and signal control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zichao-lin-517" }]
keywords = [
  "intelligent-transportation",
  "traffic-signal-control",
  "traffic-simulation",
  "graph-neural-network",
  "digital-twin",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]
ml = [
  "torch>=2.1",
]
viz = [
  "streamlit>=1.33",
  "plotly>=5.20",
]

[project.scripts]
neurotraffic = "neurotraffic.cli:main"

[project.urls]
Homepage = "https://github.com/zichao-lin-517/neurotraffic-lab"
Repository = "https://github.com/zichao-lin-517/neurotraffic-lab"
Issues = "https://github.com/zichao-lin-517/neurotraffic-lab/issues"
Documentation = "https://github.com/zichao-lin-517/neurotraffic-lab/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
